--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
-# Data used to train the models
-data/raw/
-data/prepared/
-
-# Evaluation results
-evaluation/
-
-# The models
-model/
+## .DS_Store files
+.DS_Store
 
 ## Python
 .venv/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
+
+## DVC
+
+# DVC will add new files after this line
+/model
