--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-## .DS_Store files
-.DS_Store
-
 ## Python
 .venv/
 
@@ -8,6 +5,9 @@
 __pycache__/
 
 ## DVC
+
+# DVC plots
+dvc_plots
 
 # DVC will add new files after this line
 /model
